--- a/Projects/NHL_Skater_Data/CapFriendly_DataCollection.ipynb
+++ b/Projects/NHL_Skater_Data/CapFriendly_DataCollection.ipynb
@@ -106,6 +106,7 @@
    "source": [
     "# Setting up pandas dataframe to collect & organize the scraped data\n",
     "import pandas as pd\n",
+    "pd.options.mode.chained_assignment = None  # default='warn' # clearing false-positive warning that will show executing later loop\n",
     "\n",
     "df = pd.DataFrame(columns = pd_columns)\n",
     "df"
